<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatsActivity.Inside_chat"
    android:orientation="vertical"
    android:id="@+id/classDetailPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9edc9"
        android:padding="10dp"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            app:tint="#403d39"
            android:layout_centerVertical="true"
            android:id="@+id/back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CSCI310"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#403d39"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/back_btn"
            android:id="@+id/class_name" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_add"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_playlist_remove_24" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname_container">

                <TextView
                    android:id="@+id/fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="CSCI 310: Software Engineering (4.0 units)"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-light"/>

                <View
                    android:id="@+id/divider"
                    android:layout_below="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/prof_container"
                android:layout_width="match_parent"
                android:layout_below="@+id/fullname_container"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/profile_pic_image_view"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/circular"
                    android:backgroundTint="@color/lightGreen"
                    android:src="@drawable/img" />

                <LinearLayout
                    android:id="@+id/prof_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/profile_pic_image_view"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Professor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"

                        android:text="Professor:"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/Professor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:layout_marginLeft="10dp"
                        android:text="Chao Wang"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prof_container">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Course Description:"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:paddingHorizontal="10dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="Chao WangChao WangChao WangChao WangChao WangChao
                WangChao WangChao WangChao WangChao WangChao Wang"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/rounded_for_recycle"
                        android:backgroundTint="#fefae0"
                        android:text="Click to see the Roster" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="?android:attr/listDivider" />

                    <RelativeLayout
                        android:id="@+id/material_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/material"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="Course Material:"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/materialsList"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_below="@id/material"
                                android:padding="10dp" />

                            <TextView
                                android:id="@+id/emptyMaterial"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:gravity="center"
                                android:text="Be the first one to upload material!"
                                />

                            <TextView
                                android:id="@+id/empty_view1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="No Materials Yet."
                                android:gravity="center"
                                android:visibility="gone"/>

                            <Button
                                android:id="@+id/uploadMaterialbtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_for_recycle"
                                android:backgroundTint="#fefae0"
                                android:layout_marginHorizontal="10dp"
                                android:layout_marginVertical="10dp"
                                android:text="Upload More Material" />
                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="?android:attr/listDivider" />

                    <RelativeLayout
                        android:id="@+id/roster_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/comments_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/commentbtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:background="@drawable/rounded_for_recycle"
                                android:backgroundTint="#fefae0"
                                android:layout_marginHorizontal="10dp"
                                android:text="Add A Review" />

                            <TextView
                                android:layout_margin="10dp"
                                android:id="@+id/comments"
                                android:layout_marginTop="25dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="Class Reviews:"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/reviewRecycleView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="10dp" />

                            <TextView
                                android:id="@+id/emptyReview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:gravity="center"
                                android:text="Be the first one to review!"
                                />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
