<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/rounded_pop_window"
    android:backgroundTint="@color/white"
    android:elevation="2dp"
    android:id="@+id/reviewPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Leave a Review" />


        <RelativeLayout
            android:id="@+id/overallLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleLayout"
            android:orientation="vertical"
            >

                <TextView
                    android:id="@+id/overall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Overall:" />

                <RatingBar
                    android:id="@+id/overallRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="7dp"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/workloadLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@id/overallLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Workload:" />

                <RatingBar
                    android:id="@+id/workloadRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="7dp"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/attendanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@id/workloadLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/attendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Attendance required?" />

                <CheckBox
                    android:id="@+id/attendanceSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/latesubmissionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@id/attendanceLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/late"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Late submissions allowed?" />

                <CheckBox
                    android:id="@+id/lateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <EditText
                android:id="@+id/Review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/latesubmissionLayout"
                android:hint="Enter your comments here"
                android:inputType="textMultiLine"
                android:minHeight="80dp"
                android:padding="20dp" />


            <Button
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Review"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/coolLightGreen"
                android:background="@drawable/rounded_for_recycle"
                android:textColor="@color/white"
                android:text="Submit" />

        </LinearLayout>

    </LinearLayout>
