...

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/nav_classes"
        android:icon="@drawable/ic_friends"
        android:title="Classes" />
    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_add"
        android:title="Post" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_chat"
        android:title="ChatList" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />

</menu>
