<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_classes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9edc9"
        android:padding="10dp"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/main_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Traveler's Classroom"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#403d39"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_toolbar"
            android:padding="10dp"
            android:id="@+id/post_recycler_view"
            />


</RelativeLayout>